[workspace]
members = [
    "crates/eth-config-api",
    "crates/eth-config-reth",
    "crates/eth-config-cli",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["EIP-7910 contributors"]
license = "MIT"  # adjust if needed

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
